fix heading overflow in comments

--- a/markup.css
+++ b/markup.css
@@ -43,9 +43,7 @@
 	margin-bottom: 0.2em;
 	
 	margin-left: -.3em;
-	margin-right: -.3em;
 	padding-left: .3em;
-	padding-right: .3em;
 }
 
 .markup-root h2 {
